@@ -1,0 +1,3 @@
+<strings>
+    <string id="30200">HD Video Quality</string>
+</strings>
