@@ -1,2 +1,4 @@
+[B]Version 0.1.1[/B]
+- Configure video quality and subtitle support
 [B]Version 0.1.0[/B]
-- Initial version of yourtvseri.es plugin
+- Initial version of yourtvseries.eu plugin
